--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,8 @@
   "name": "practica-ajax-datatables",
   "private": true,
   "dependencies": {
-    "bootstrap": "~3.2.0"
+    "bootstrap": "~3.2.0",
+    "bootstrap.growl": "~2.0.1",
+    "jquery-validate": "~1.13.1"
   }
 }
